@@ -28,7 +28,6 @@
 #include <boost/shared_ptr.hpp>
 #include <boost/signals2.hpp>
 #include <boost/filesystem.hpp>
-#include <libdcp/metadata.h>
 #include "isdcf_metadata.h"
 #include "colour_conversion.h"
 #include "server.h"
@@ -145,8 +144,8 @@ public:
 		return _default_dcp_content_type;
 	}
 
-	libdcp::XMLMetadata dcp_metadata () const {
-		return _dcp_metadata;
+	std::string dcp_issuer () const {
+		return _dcp_issuer;
 	}
 
 	int default_j2k_bandwidth () const {
@@ -309,8 +308,8 @@ public:
 		changed ();
 	}
 
-	void set_dcp_metadata (libdcp::XMLMetadata m) {
-		_dcp_metadata = m;
+	void set_dcp_issuer (std::string i) {
+		_dcp_issuer = i;
 		changed ();
 	}
 
@@ -445,7 +444,7 @@ private:
 	Ratio const * _default_scale;
 	Ratio const * _default_container;
 	DCPContentType const * _default_dcp_content_type;
-	libdcp::XMLMetadata _dcp_metadata;
+	std::string _dcp_issuer;
 	int _default_j2k_bandwidth;
 	int _default_audio_delay;
 	std::vector<PresetColourConversion> _colour_conversions;
