@@ -1,5 +1,8 @@
 2014-08-31  Carl Hetherington  <cth@carlh.net>
 
+	* Remove configurable CPL <Creator> and use "DCP-o-matic (version) (git)"
+	instead.
+
 	* Fix lack of i18n of strings from src/lib/po on OS X.
 
 	* Give a hint when content and container aspect ratios are not
